
apply plugin: 'java'
apply plugin: 'idea'

version = '0.0.1-SNAPSHOT'
sourceCompatibility = '19'
targetCompatibility = '19'

compileJava {
	options.encoding = "UTF-8"
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'junit:junit:4.13.1'
	implementation 'org.testng:testng:7.1.0'
	testImplementation("org.junit.jupiter:junit-jupiter:5.9.2")
}

test {
	useJUnitPlatform()
}